src/components/Editor/Tabs.css
.source-header {
  border-bottom: 1px solid var(--theme-splitter-color);
  height: 30px;
  display: flex;
  flex: 1;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  align-items: stretch;
}

.source-header * {
  -moz-user-select: none;
  user-select: none;
}

.source-tabs {
  max-width: calc(100% - 80px);
  float: left;
  margin-inline-start: 21px;
}

.source-header .new-tab-btn {
  width: 14px;
  height: 14px;
  display: inline-block;
  position: relative;
  top: 4px;
  margin: 4px;
  margin-inline-start: 8px;
  line-height: 0;
  cursor: pointer;
  fill: var(--theme-comment);
  transition: 0.1s ease;
}

.source-tab {
  color: var(--theme-faded-tab-color);
  border: 1px solid transparent;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  height: 24px;
  line-height: 20px;
  display: inline-block;
  position: relative;
  transition: all 0.25s ease;
  min-width: 40px;
  overflow: hidden;
}

.source-tab {
  padding-top: 2px;
  padding-bottom: 2px;
  padding-inline-start: 12px;
  padding-inline-end: 20px;
  margin-top: 6px;
  margin-inline-start: 8px;
}

.source-tab:hover {
  background-color: var(--theme-toolbar-background-alt);
  border-color: var(--theme-splitter-color);
  cursor: pointer;
}

.source-tab.active {
  color: var(--theme-body-color);
  background-color: var(--theme-body-background);
  border-color: var(--theme-splitter-color);
  border-bottom-color: transparent;
}

.source-tab path {
  fill: var(--theme-faded-tab-color);
}

.source-tab.active path {
  fill: var(--theme-body-color);
}

.source-tab .prettyPrint {
  display: block;
  position: absolute;
  top: 3px;
  left: 6px;
}

.source-tab .prettyPrint svg {
  height: 1em;
  width: 1em;
}

.source-tab .prettyPrint path {
  fill: var(--theme-textbox-box-shadow);
}

.source-tab .close-btn {
  position: absolute;
  top: 3px;
}

.source-tab .filename {
  text-overflow: ellipsis;
  overflow: hidden;
}

.source-tab.pretty .filename {
  padding-left: 12px;
}

.source-tab .close-btn {
  offset-inline-end: 4px;
}

.source-tab .close {
  display: none;
}

.source-tab:hover .close {
  display: block;
}

